# englog

./: .gitignore  README.md  pyproject.toml
englog/: __init__.py  capture.py  cli.py  config.py  database.py  export.py  gui.py  note_utils.py  session.py  summary.py  tray.py
tests/: conftest.py  test_database.py  test_note_utils.py  test_session.py  test_summary.py
